# formularioPizza

./: .gitignore  README.md  app.py  config.py  init_db.py  main.py  pedidos.db  pyproject.toml  requirements.txt
database/: database.py
database/models/: pizzas.py
routes/: home.py
static/css/: comprovante.css  form.css  lista.css
static/js/: main.js
templates/: comprovante.html  confirm.html  confirmacao.html  form.html  index.html  lista_pedidos.html  visualizar_pedidos.html
