[project]
name = "formulariopizza-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo",email = "gustavo.france@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "peewee (>=3.18.2,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "xlsxwriter (>=3.2.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "formulariopizza"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
